--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Link Manager Pro",
-  "short_name": "LinkMeir",
+  "short_name": "LinkManager",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0f172a",
@@ -11,7 +11,7 @@
       "src": "icon.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
-      "purpose": "any maskable"
+      "purpose": "any maskable" 
     },
     {
       "src": "icon.jpg",
