--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,18 @@
   "name": "Link Manager Pro",
   "short_name": "LinkManager",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
   "orientation": "portrait-primary",
+  "description": "Secure cloud-based link manager",
   "icons": [
     {
       "src": "icon.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
-      "purpose": "any maskable" 
+      "purpose": "any maskable"
     },
     {
       "src": "icon.jpg",
